--- a/advanced_search.html
+++ b/advanced_search.html
@@ -10,7 +10,7 @@
     <!--Top Right Navigation Bar-->
     <nav id="nav_bar">
       <ul id="nav-list">
-        <li><a href="search.html" target="_top">Google</a></li>
+        <li><a href="index.html" target="_top">Google</a></li>
       </ul>
     </nav>
 
